--- a/layout_css/index.html
+++ b/layout_css/index.html
@@ -5,16 +5,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav></nav>
-    <div id="wrapper">
-      <div class="boldedText">Text</div>
-      <div class="boldedText">Text</div>
-      <div class="boldedText">Text</div>
-    </div>
-    <div id="wrapperTwo">
-      <div class="tinyText"></div>
-      <div class="tinyText"></div>
-      <div class="tinyText"></div>
+    <nav>
+      <div id="navLeft"></div>
+      <div id="navRight">
+        <div id="navMenu"></div>
+      </div>
+    </nav>
+    <div class="wrapper">
+      <div class="picProfile">
+        <img
+          alt="puppy"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIQVt19jzUt7cAxBwWYuN-uDZOBQDRl2dsL1ynKlbLFw&s"
+        />
+        <h1>Cuddles</h1>
+      </div>
+      <div class="picProfile">
+        <img
+          alt="puppy"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIQVt19jzUt7cAxBwWYuN-uDZOBQDRl2dsL1ynKlbLFw&s"
+        />
+        <h1>Cuddles</h1>
+      </div>
+      <div class="picProfile">
+        <img
+          alt="puppy"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIQVt19jzUt7cAxBwWYuN-uDZOBQDRl2dsL1ynKlbLFw&s"
+        />
+        <h1>Cuddles</h1>
+      </div>
     </div>
     <footer></footer>
   </body>
