--- a/Justin's Bookhouse/index.html
+++ b/Justin's Bookhouse/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justin's Book House</title>
+    <link rel="stylesheet" href="input.scss" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -54,7 +55,11 @@
           </div>
     </div>
     <footer>
-        <a href=""></a>
+      <nav>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+      </nav>
     </footer>
   </body>
 </html>
