--- a/Personal Website /contact.html
+++ b/Personal Website /contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=ß, initial-scale=1.0" />
     <title>Personal Website</title>
-    <link rel="stylesheet" href="stylce.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section id="pageContainer">
