Added a form and made some CSS changes to the file

--- a/Personal Website /about.html
+++ b/Personal Website /about.html
@@ -45,9 +45,10 @@
       />
       <p>
         I think fitness is really important and contributes to your overall
-        health; and balances whatever diet you consume. I eat a vegan diet and
-        stay active to the best of my ability. Whilst being out in nature, I
-        have a tendency to capture anything that is subjectively beautiful.
+        health; and balances whatever diet you consume. I try to eat a healthy
+        diet and stay active to the best of my ability. Whilst being out in
+        nature, I have a tendency to capture anything that is subjectively
+        beautiful.
       </p>
     </div>
   </body>
