--- a/Personal Website /contact.html
+++ b/Personal Website /contact.html
@@ -18,6 +18,23 @@
           <a href="contact.html">CONTACT</a>
         </nav>
       </div>
+      <div id="form">
+        <form method="get">
+          Name:<input type="text" name="name" /> Email:<input
+            type="text"
+            name="email"
+          />
+          Message:<textarea
+            name="message"
+            rows="5"
+            cols="10"
+            style="width: 500px"
+          >
+Send a Message</textarea
+          >
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     </section>
   </body>
 </html>
